# MI-bicliques

./: .project  CITATION  CMakeLists.txt  CONTRIBUTORS  README.md
reproducibility/: OCTgenerator.c  OCTgenerator_PM.c  README.md
src/: bicliques_algorithms.cpp
src/algorithms/: AllMaximalIndependentSets.cpp  AllMaximalIndependentSets.h  DiasGeneral.cpp  DiasGeneral.h  EnumMIB.cpp  EnumMIB.h  GraphOrdering.h  LexMIB.cpp  LexMIB.h  MICA.cpp  MICA.h  MaximalCrossingBicliques.cpp  MaximalCrossingBicliques.h  MaximalCrossingBicliquesBipartite.cpp  MaximalCrossingBicliquesBipartite.h  NonLexMIB.cpp  NonLexMIB.h  OCTMIB.cpp  OCTMIB.h  OCTMIBII.cpp  OCTMIBII.h  OCTMICA.cpp  OCTMICA.h  OutputOptions.h  SimpleCCs.cpp  SimpleCCs.h  SimpleOCT.cpp  SimpleOCT.h  iOCTMIB.cpp  iOCTMIB.h
src/graph/: BicliqueLite.cpp  BicliqueLite.h  BlueprintLite.cpp  BlueprintLite.h  EditableGraph.cpp  EditableGraph.h  ExpansionResult.cpp  ExpansionResult.h  Graph.cpp  Graph.h  OctGraph.cpp  OctGraph.h  OrderedVector.cpp  OrderedVector.h  OrderedVertexSet.cpp  OrderedVertexSet.h  SearchTreeBag.cpp  SearchTreeBag.h  SearchTreeBagPlus.cpp  SearchTreeBagPlus.h
test/: bipartite_left50right500p0.09.txt  ground_truth.txt  ground_truth_huge.txt  ground_truth_large.txt  ground_truth_mcbb_large.txt  ground_truth_mcbb_medium.txt  ground_truth_medium.txt  ground_truth_mibs.h  ground_truth_multi_ccs.txt  test_disconnected_graph.txt  test_edgelist.txt  test_graph.txt  test_graph_ban.txt  test_graph_bipartite.txt  test_graph_delay_conditions.txt  test_graph_large.txt  test_graph_mcb_huge.txt  test_graph_small.txt  test_mcbb_large.txt  test_mcbb_medium.txt  test_multi_ccs.txt
test/allmaximalis/: get_all_mis.cpp  get_all_mis_disconnected.cpp
test/biclique/: get_partitions.cpp  operator_eq.cpp  operator_less.cpp  size.cpp  to_string.cpp
test/blueprintlite/: constructor.cpp  expand_add_from_iterative_wait.cpp  expand_duplicate_check.cpp  expand_failure_empty_cc_in.cpp  expand_future_maximal.cpp  expand_non_relevant_check.cpp  expand_success.cpp  get_bicliques.cpp  is_banned.cpp  is_currently_maximal.cpp  next_future_maximal.cpp
test/diasgeneral/: check_for_mib.cpp  count_only_multi_ccs.cpp  dias_general.cpp  dias_general_large.cpp  dias_general_medium.cpp  dias_general_multi_ccs.cpp  lex_least_biclique.cpp
test/editablegraph/: constructor.cpp  degree_buckets.cpp  delete_node.cpp
test/expansionresult/: constructor.cpp
test/graph/: add_edge.cpp  adjlist_constructor.cpp  biclique_string.cpp  can_be_added_to_biclique.cpp  edgelist_constructor.cpp  get_neighborhood_intersection.cpp  get_neighbors.cpp  is_biclique.cpp  is_completely_connect_to.cpp  is_completely_independent_from.cpp  list_constructor.cpp  subgraph.cpp  subgraph_permutations.cpp
test/lexmib/: check_for_mib.cpp  count_only_multi_ccs.cpp  lex_least_biclique.cpp  lexmib.cpp  lexmib_large.cpp  lexmib_medium.cpp  lexmib_multi_ccs.cpp
test/maximalcrossingbicliques/: mcb.cpp  mcb_bipartite.cpp  mcb_bipartite_large.cpp  mcb_bipartite_medium.cpp  mcb_huge.cpp  mcb_large.cpp
test/octgraph/: get_node_partition.cpp  get_partition.cpp  get_partition_neighbors.cpp  graph_constructor.cpp
test/octmib/: oct_set_input.cpp  octmib.cpp  octmib_huge.cpp  octmib_large.cpp  octmib_medium.cpp  octmib_multi_ccs.cpp
test/orderedvector/: has_vertex.cpp  list_constructor.cpp  operator_bracket.cpp  operator_eq.cpp  operator_less.cpp  set_union.cpp  vector_intersect_neighborhood.cpp  vector_minus_neighborhood.cpp  vertex_list_operations.cpp
test/orderedvertexset/: add_vertex_safe.cpp  has_subset.cpp  list_constructor.cpp  map_constructor.cpp  operator_bracket.cpp  operator_eq.cpp  operator_less.cpp  range_bounds.cpp  set_intersection.cpp  set_minus.cpp  set_union.cpp  truncate_after_node.cpp  truncate_before_node.cpp  vertex_list_operations.cpp
test/searchtreebag/: add_blueprint.cpp  ban_vertex_in_blueprints.cpp  constructor.cpp
test/searchtreebagplus/: all_functions.cpp  expand_add_from_iterative_wait.cpp  expand_failure_empty_cc_in.cpp  expand_future_maximal.cpp  expand_success.cpp  get_biclique.cpp
test/simpleccs/: simpleccs_robust.cpp
test/simpleoct/: prescribed_oct_robust_large.cpp  simpleoct.cpp  simpleoct_bipartite.cpp  simpleoct_bipartite_huge.cpp  simpleoct_robust.cpp  simpleoct_robust_huge.cpp  simpleoct_robust_large.cpp
